syntax = "proto3";

package game;

option go_package = "./game";

service GameService {
  rpc ProxyGameboard(stream Move) returns (stream GameBoard) {}
  rpc StreamGameboard(stream Move) returns (stream GameBoard) {}
}

// Gameboard representation
message GameBoard {
  map<int32, Player> players = 1;
  int32 id = 2;
  double rad = 3;
}

message Player {
  int32 id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  double rad = 5;
  double ringrad = 6;
  int32 color = 7;
  int32 kills = 8;
  bool ringEnabled = 9;
  int32 speed = 10;
}

// Direction to move
message Move {
  enum Direction {
	NONE = 0;
	UP = 1;
	DOWN = 2;
	LEFT = 3;
	UP_LEFT = 4;
	DOWN_LEFT = 5;
	RIGHT = 6;
	UP_RIGHT = 7;
	DOWN_RIGHT = 8;
  }
  int32 userkey = 1;
  int32 gameid = 2;
  Direction direction = 3;
  bool enableRing = 4;
  repeated int32 hitPlayers = 5;
}
